--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.4.2
 itsdangerous==1.1.0
 jedi==0.13.3
-Jinja2==2.10
+Jinja2>=2.10.1
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -41,7 +41,7 @@ mistune==0.8.4
 mock==2.0.0
 nbconvert==5.4.1
 nbformat==4.4.0
-notebook==5.7.6
+notebook>=5.7.8
 numpy==1.16.2
 pandas==0.24.2
 pandocfilters==1.4.2
@@ -82,8 +82,8 @@ traitlets==4.3.2
 tweet-parser==1.13.1
 tweet-preprocessor==0.5.0
 twitterscraper==0.9.3
-urllib3==1.24.1
+urllib3>=1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.15.1
+werkzeug>=0.15.3
 widgetsnbextension==3.4.2
